--- a/reto5/conf/configEN.json
+++ b/reto5/conf/configEN.json
@@ -12,5 +12,6 @@
 	"lenguajes":"Languages learned",
 	"email":"please send me a email to [email], if you need to contact me",
 	"buscar": "Search",
-	"saludo": "Hi"
+	"saludo": "Hi",
+	"sinResultado": "No students found with the name: "
 }
