--- a/reto5/conf/configPT.json
+++ b/reto5/conf/configPT.json
@@ -12,5 +12,6 @@
 	"lenguajes":"Linguagems aprendidas",
 	"email":"Se precisar me contatar pode me escrever em [email]",
 	"buscar": "Procurar",
-	"saludo": "Olá"
+	"saludo": "Olá",
+	"sinResultado": "Nenhum aluno encontrado com o nome: "
 }
